fix ul li overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,9 @@ html {
 }
 
 .modal {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 94%;
   position: absolute;
   padding-top: 15px;
   bottom: 0;
@@ -43,7 +46,6 @@ html {
   .svg__container {
     position: relative;
     height: 30px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 
     svg {
       position: absolute;
@@ -60,6 +62,7 @@ html {
     height: 100%;
     padding: 0;
     margin: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
     overflow-y: scroll;
     background: #fff;
     box-sizing: border-box;
@@ -160,6 +163,7 @@ li {
       width: 100%;
       height: 100%;
     }
+
     ul {
       li {
         font-size: 32px;
